# lab4

./: CMakeLists.txt
task0a/: exe  main.c  makefile  util.h
task0b/: exe  greeting  main.c  util.c
task1a/: exe  main.c  test  test.c
task2/: main.c
task2a/: exe  lab4_start.s  main.c
